# grimoire-context

./: .gitignore  AGENTS.md  AI_GUIDANCE.md  CHANGELOG.md  LICENSE  LOGGING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: 01_basic_usage.py  02_advanced_features.py  03_real_world_integration.py  README.md  logging_integration.py
src/grimoire_context/: __init__.py  context.py  exceptions.py  logging.py  merge.py  path_resolver.py  protocols.py
src/wyrdbound_context/: __init__.py  context.py  exceptions.py  logging.py  merge.py  path_resolver.py  protocols.py
src/wyrdbound_context.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_context.py  test_hierarchical.py  test_immutability.py  test_integration.py  test_logging.py  test_nested_object_handling.py  test_parallel.py
